--- a/checkout.css
+++ b/checkout.css
@@ -383,3 +383,27 @@ label {
   }
 
 }
+
+@media (min-width: 1401px)  {
+
+  body{
+    max-width: 1400px;
+    margin: 0 auto;
+  }
+  .section{
+    margin: auto;
+    max-width: 900px;
+  }
+}
+
+@media (min-width: 1000px) and (max-width: 1400px) {
+  .hidden-categories.active{
+    right: 155px;
+  }
+
+  .section{
+    margin: auto;
+    max-width: 900px;
+  }
+
+}
